    * 4210 jolokia_generic, jolokia_generic.rate, jolokia_generic.string: New checks to monitor custom MBeans
    * 4175 didactum_sensors_analog.humidity: new check which monitors the humidity of Didactum devices supporting the DIDACTUM-SYSTEM-MIB
    * 4257 logwatch.groups: now allows regular expressions within include and exclude patterns each beginning with a tilde
    * 4171 FIX: perle_psmu: fixed value error...
    * 4172 FIX: smart.temp: fixed discovery and check function...
    * 4173 FIX: if.include: ignore some more keys in 'Network interfaces and switch ports' rule which are only used for interface grouping
    * 4207 FIX: mk_jolokia: Use configured port as default instance name...
            NOTE: Please refer to the migration notes!
    * 4208 FIX: mk_jolokia: Plugin now works with jolokia versions requiring the base url to finish with a slash...
    * 4174 FIX: added missing perfometer for interface services
    * 4119 FIX: check_mk_agent.solaris: fixed run_cached function...
    * 4006 FIX: Windows Agent: Fixed possible memory leak when using logwatch with vista api setting
    * 4008 FIX: Windows Agent, dotnet_clrmemory section: prevent indefinite freeze of windows agent...
    * 4209 FIX: mk_jolokia: Setting a default product now works...
    * 4120 FIX: fixed checks mysql and mysql.sessions for multiple MySQL instances...
    * 4121 FIX: mk_mysql: fixed handling of multiple instances
    * 4122 FIX: ibm_svc_enclosure: added support for firmware >= 7.8...
    * 4182 FIX: mysql_slave: fixed crash if agent output is empty...
    * 4176 FIX: postfix_mailq_status: fixed wrong status handling
    * 4183 FIX: ibm_imm_fan: Fixed crash if fan speed is "unavailable"...
    * 4184 FIX: hivemanager_devices: Fixed bug if device is up for more than 1 year...
    * 4230 FIX: db2_logsizes Removed debug output (regression since 1.4.0i3)
    * 4232 FIX: tsm_storagepools: Fixed missing perfdata