@@ -24,7 +24,9 @@
 # to the Free Software Foundation, Inc., 51 Franklin St,  Fifth Floor,
 # Boston, MA 02110-1301 USA.
 
-import sys, getopt, urllib2
+import sys, getopt
+import json
+import requests
 
 def usage():
     sys.stderr.write("""Check_MK Ruckus Spot Agent
@@ -39,11 +41,12 @@ OPTIONS:
 """)
     sys.exit(1)
 short_options = 'h:'
-long_options  = ['help', 'address=', 'venueid=', 'apikey=']
+long_options  = ['help', 'address=', 'venueid=', 'apikey=', 'agent_port=']
 
-address = None
-venueid = None
-api_key = None
+address    = None
+venueid    = None
+api_key    = None
+agent_port = None
 
 try:
     opts, args = getopt.getopt(sys.argv[1:], short_options, long_options)
@@ -58,31 +61,55 @@ for o,a in opts:
         venueid = a
     elif o in [ '--apikey']:
         api_key = a
+    elif o in [ '--agent_port']:
+        agent_port = a
     elif o in [ '-h', '--help' ]:
         usage()
 
 if len(args) > 0 or not api_key or not venueid or not address:
     usage()
 
-url = "http://%(address)s/api/v1/venues/%(venueid)s/access_points/statuses.json" % \
-            {"address": address, "venueid": venueid}
+# TODO: put into special_agent lib
+def get_agent_info_tcp(hostname):
+    import socket
+    response = ""
+    ipaddress = socket.gethostbyname(hostname)
+    s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+    s.settimeout(10)
+    s.connect((ipaddress, 6556))
+
+    try:
+        s.setblocking(1)
+    except:
+        pass
+
+    response = ""
+    while True:
+        out = s.recv(4096, socket.MSG_WAITALL)
+        if out and len(out) > 0:
+            response += out
+        else:
+            break
+    s.close()
+
+    return response
 
 try:
-    p = urllib2.HTTPPasswordMgrWithDefaultRealm()
-    p.add_password(None, url, api_key, "X")
 
-    handler = urllib2.HTTPBasicAuthHandler(p)
-    opener = urllib2.build_opener(handler)
-    urllib2.install_opener(opener)
+    for url_end, section_type in [("access_points/statuses.json", "ap"),
+                                  ("locations/last_known.json",   "locations")]:
+        url = "http://%(address)s/api/v1/venues/%(venueid)s/%(url_end)s" % \
+              {"address": address, "venueid": venueid, "url_end": url_end}
+        response = requests.get(url, auth = (api_key, "X"))
+        data = json.loads(response.text)
 
-    response = urllib2.urlopen(url).read()
-    data = eval(response)
+        sys.stdout.write("<<<ruckus_spot_%s:sep(0)>>>\n" % section_type)
+        sys.stdout.write(response.text + "\n")
 
-    print "<<<ruckus_spot_ap:sep(9)>>>"
-    for entry in data:
-        print "[band]\t%s" % entry["band"]
-        for ap in entry["access_points"]:
-            print "%s\t%s" % (ap["name"], ap["status"])
+    if agent_port != None:
+        hostname = address.split(":")[0]
+        sys.stdout.write(get_agent_info_tcp(hostname))
+
 except Exception, e:
     sys.stderr.write("Connection error %s" % e)
     sys.exit(1)
