@@ -13,6 +13,7 @@
     * 4210 jolokia_generic, jolokia_generic.rate, jolokia_generic.string: New checks to monitor custom MBeans
     * 4175 didactum_sensors_analog.humidity: new check which monitors the humidity of Didactum devices supporting the DIDACTUM-SYSTEM-MIB
     * 4257 logwatch.groups: now allows regular expressions within include and exclude patterns each beginning with a tilde
+    * 4013 Ruckus Spot / ruckus_spot_locations: new check to monitor the number of unqiue MACs addresses...
     * 4171 FIX: perle_psmu: fixed value error...
     * 4172 FIX: smart.temp: fixed discovery and check function...
     * 4173 FIX: if.include: ignore some more keys in 'Network interfaces and switch ports' rule which are only used for interface grouping
